<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.genya.myapplication.register">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ed_Name"
        android:hint="Имя"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Регистрация"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg"
        android:onClick="btn_reg"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edSurname"
        android:hint="Фамилия"
        android:layout_below="@+id/ed_Name"
        android:layout_alignStart="@+id/ed_Name"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@id/edDate"
        android:onClick="ed_Date"
        android:focusable="false"
        android:hint="@string/date_b"
        android:layout_below="@+id/edSurname"
        android:layout_alignStart="@+id/edSurname"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edPassw"
        android:hint="@string/pass"
        android:layout_below="@+id/edCountry"
        android:layout_alignStart="@+id/edCountry"
        android:layout_marginTop="15dp"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edLogin"
        android:hint="Логин"
        android:layout_below="@+id/edDate"
        android:layout_alignStart="@+id/edDate"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edCountry"
        android:hint="Страна"
        android:layout_below="@+id/edLogin"
        android:layout_alignStart="@+id/edLogin"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_Passw1"
        android:hint="@string/passw1"
        android:layout_below="@+id/edPassw"
        android:layout_alignStart="@+id/edPassw"
        android:layout_marginTop="15dp" />

</RelativeLayout>
